<resources>
    <string name="app_name">CompreMelhor</string>
    <string name="app_id">1621410234792107</string>
    <string name="yes">Sim</string>
    <string name="ok">OK</string>
    <string name="no">Não</string>
    <string name="edit">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="back">Voltar</string>
    <string name="options">Opções</string>
    <string name="out">Sair</string>
    <string name="undone">Desfazer</string>
    <string name="save">Salvar</string>
    <string name="finish">Finalizar</string>
    <string name="edit_text_label_email">Email</string>
    <string name="edit_text_label_password">Senha</string>
    <string name="edit_text_label_name">Nome</string>
    <string name="edit_text_label_document">Numero Documento</string>
    <string name="edit_text_label_password_confirmation">Repita a senha</string>
    <string name="edit_text_label_repeat_password">Repita a senha</string>
    <string name="edit_text_label_repeat_new_password">Repita a nova Senha</string>
    <string name="edit_text_label_new_password">Nova Senha</string>
    <string name="button_edit_cart">Editar Carrinho</string>
    <string name="button_text_close_purchase">Concluir a Compra</string>
    <string name="button_text_login">Log in</string>
    <string name="button_text_register">Cadastrar se</string>
    <string name="button_text_add_address">Adicionar Endereço</string>
    <string name="button_text_save_password">Salvar Senha</string>
    <string name="button_text_change_password">Alterar Senha</string>
    <string name="button_text_change_on_cart">ALTERAR QUANTIDADE</string>
    <string name="button_text_put_on_cart">COLOCAR NO CARRINHO</string>
    <string name="setting_view_purchases_by_year">Visualisar compras por ano</string>
    <string name="setting_view_purchases_by_month">Visualisar compras por mês</string>
    <string name="check_box_label_keep_connected">Manter-se conectado</string>
    <string name="edit_text_label_street">Rua</string>
    <string name="edit_text_label_number">Numero</string>
    <string name="edit_text_label_quarter">Bairro</string>
    <string name="edit_text_label_city">Cidade</string>
    <string name="edit_text_label_state">Estado</string>
    <string name="edit_text_label_zipcode">CEP</string>
    <string name="dialog_option_text_new_address">Novo Endereço</string>
    <string name="dialog_option_text_address">Remover Endereço</string>
    <string name="dialog_content_sync_purchases">Sincronizando compras com o servidor...</string>
    <string name="dialog_content_text_changing_item_on_cart">Alterando item no carrinho...</string>
    <string name="dialog_content_text_removing_item_on_cart">Removendo item do carrinho...</string>
    <string name="dialog_content_text_putting_item_on_cart">Inserindo item no carrinho...</string>
    <string name="dialog_content_text_starting_item_on_cart">Iniciando carrinho atual...</string>
    <string name="dialog_content_text_loading_places">Carregando locais...</string>
    <string name="dialog_content_text_removing_address">Excluindo endereço...</string>
    <string name="dialog_content_text_running">Processando..</string>
    <string name="looking_for_freight_types">Carregando tipos de fretes...</string>
    <string name="dialog_content_text_registering_on_server">Registrando no servidor...</string>
    <string name="dialog_content_text_validating_data_on_server">Validando Dados no Servidor...</string>
    <string name="dialog_content_text_registering_data">Realizando Cadastro...</string>
    <string name="dialog_content_text_loading_product">Carregando informações do produto...</string>
    <string name="dialog_content_text_starting_transaction">Iniciando transação para conclusão da compra...</string>
    <string name="dialog_header_wait">Aguarde</string>
    <string name="delete_confirmation_address">Você realmente deseja remover este endereço?</string>
    <string name="delete_confirmation_cart_item">Você realmente deseja remover este item de seu carrinho?</string>
    <string name="close_purchase_confirmation">Após a compra ser fechada, não será possível reabrir a mesma. Você tem certeza que deseja fechar a compra?</string>
    <string name="logout_action_confirmation">Você tem certeza que deseja sair?</string>
    <string name="view_category_spent_historical_confirmation">Visualizar histórico de gastos da categoria deste produto?</string>
    <string name="address_list_is_empty">Você não possui nenhum endereço cadastrado.</string>
    <string name="purchase_list_is_empty">Você ainda não concluiu nenhuma compra.</string>
    <string name="regex_pattern_cpf_document">([0-9]{3}[\\.]?[0-9]{3}[\\.]?[0-9]{3}[-]?[0-9]{2})</string>
    <string name="regex_pattern_cnpj_document">([0-9]{2}[\\.]?[0-9]{3}[\\.]?[0-9]{3}[\\/]?[0-9]{4}[-]?[0-9]{2})</string>
    <string name="err_item_already_on_cart">Este item já esta no carrinho.</string>
    <string name="err_while_trying_add_item_on_cart">"Desculpe, ocorreu um erro inesperado ao tentar adicionar este item"</string>
    <string name="err_while_trying_edit_item_on_cart">"Desculpe, ocorreu um erro inesperado ao tentar editar este item"</string>
    <string name="err_document_already_registered">Este documento já está cadastrado</string>
    <string name="err_email_already_used">Este e-mail já está cadastrado</string>
    <string name="err_field_not_filled">Campo necessário não preenchido</string>
    <string name="err_differents_password">Senhas divergentes</string>
    <string name="err_invalid_password_cannot_contain_space">Senha inválida. Não pode possuir espaços</string>
    <string name="err_wrong_password">Senha informada incorreta</string>
    <string name="err_expired_session">Sessão expirada. Por favor realize login novamente.</string>
    <string name="err_wrong_credentials">Usuário ou senha incorretos</string>
    <string name="err_login_facebook">Desculpe, ocorreu um erro inesperado ao tentar-se conectar pelo facebook.</string>
    <string name="err_cpf_document_invalid">Documento CPF inválido</string>
    <string name="err_document_number_invalid">Número de Documento Inválido</string>
    <string name="err_cnpj_document_invalid">Documento CNPJ inválido</string>
    <string name="err_ocurred_attempting_save_address">Ocorreu um erro ao tentar salvar o endereço</string>
    <string name="err_cep_not_found">CEP não encontrado</string>
    <string name="err_invalid_cep">Cep inválido.</string>
    <string name="err_without_connection_register_message">Por favor, se conecte a internet para realizar o cadastro.</string>
    <string name="password_updated_successful_message">Sua senha foi atualizada com sucesso.</string>
    <string name="address_removed_successful_message">Endereço excluído com sucesso!</string>
    <string name="data_registered_successful_message">Seus dados foram salvos com sucesso.</string>
    <string name="purchase_concluded_successful_message">Compra concluída com sucesso! Para detalhes da entrega, vá para Minhas Compras</string>
    <string name="address_saved_successful_message">Endereço salvo com sucesso</string>
    <string name="purchase_done_successful_message">Parabéns! Você acabou de concluir sua compra com sucesso!</string>
    <string name="product_added_successful_message">Produto adicionado com sucesso</string>
    <string name="start_purchase">Iniciar Compra</string>
    <string name="edit_profile">Editar Cadastro</string>
    <string name="manager_addresses">Gerenciar Endereços</string>
    <string name="list_purchases">Listar Compras Feitas</string>
    <string name="add_address">Adicionar Novo Endereço</string>
    <string name="change_password">Alterar minha senha</string>
    <string name="identification">N. Documento</string>
    <string name="my_data">Meu Cadastro</string>
    <string name="type_document">Tipo de Documento:</string>
    <string name="total">Total R$ </string>
    <string name="add_product">Adicionar Produto</string>
    <string name="finish_purchase">Finalizar Esta Compra</string>
    <string name="remove_product">Remover Produto</string>
    <string name="alter_quantity">Alterar Quantidade</string>
    <string name="establishment">Local:</string>
    <string name="loading_current_cart_dialog">Carregando atual carrinho</string>
    <string name="updating_current_cart_dialog">Atualizando o carrinho...</string>
    <string name="QR_CODE">Leitura de QR Code</string>
    <string name="BARCODE">Código de Barras</string>
    <string name="OTHER">Outro tipo de Código de Barras</string>
    <string name="action_bar_profile_label">Meus dados</string>
    <string name="action_bar_purchase_list">Minhas Compras</string>
    <string name="action_bar_change_password_label">Senha Login</string>
    <string name="action_bar_purchase">Items</string>
    <string name="action_bar_cart_item_label">Item Carrinho</string>
    <string name="action_bar_dashboard_label">Compre Melhor</string>
    <string name="action_bar_expired_items_label">Items</string>
    <string name="action_bar_my_addresses_label">Meus Endereços</string>
    <string name="action_bar_register_label">Cadastro</string>
    <string name="action_bar_historical_chart_label">Histórico</string>
    <string name="manual">Inserir Código</string>
    <string name="read_type">Adionar Produto Por:</string>
    <string name="menu_settings">Configurações</string>
    <string name="cpf_type">CPF</string>
    <string name="cnpj_type">CNPJ</string>
    <string name="btn_change_password_cancel_operation">Cancelar Operação</string>
    <string name="btn_change_password_commit_changes">Alterar senha</string>
    <string name="purchase_label">Nova Compra</string>
    <string name="cart">Carrinho</string>
    <string name="freight">Frete</string>
    <string name="category">Categoria</string>
    <string name="delete_all_in_category">Tirar todos produtos desta categoria</string>
    <string name="freight_type">Tipo de Frete</string>
    <string name="express_freight">Frete Expresso</string>
    <string name="scheduled_freight">Frete Agendado</string>
    <string name="select_ship_address">Selecione o endereço de entrega</string>
    <string name="address_name">Título do Endereço</string>
    <string name="clear">Limpar</string>
    <string name="without_freight">Sem Frete.</string>
    <string name="day_of_ship">Dia da Entrega</string>
    <string name="start_hour_range">A partir do horário:</string>
    <string name="select">Selecione</string>
    <string name="label_name_product">Nome</string>
    <string name="label_manufacturer_product">Marca</string>
    <string name="label_unit_product">Unidade</string>
    <string name="label_unit_price">Preço Unidade</string>
    <string name="label_label_category_product">Categoria</string>
    <string name="label_sub_total_product">Sub Total</string>
    <string name="select_quantity">Selecione Quantidade</string>
    <string name="btn_label_add_item_to_cart">Colocar no Carrinho</string>
    <string name="removed_item_success_msg">Item removido do carrinho</string>
    <string name="removed_item_error_msg">Ocorreu um erro ao tentar remover o item do carrinho.</string>
    <string name="cart_is_empty">Você não possui nenhum produto em seu carrinho.</string>
    <string name="user_document_is_null_message_error">Documento não informado</string>
    <string name="token_api">token_app DG4OjT9ciuPtHk1p7Fi/kg==</string>
    <string name="header_dialog_error_message_without_internet">Sem Conexão</string>
    <string name="address_remove_error_message">Ocorreu um erro ao tentar excluir seu endereço</string>
    <string name="action_bar_partner_label">Selecionar Local</string>
    <string name="action_bar_tab_list_items_purchase">Listagem</string>
    <string name="action_bar_tab_items_purchase_graphic">Gráfico</string>
    <string name="exception_message_user_cannot_be_null">User wouldn\'t be null here</string>
</resources>