<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/address_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/page_margin"
        android:paddingRight="@dimen/page_margin">

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/address" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp">
            <TableRow>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_text_label_zipcode" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address_name"
                    />
            </TableRow>

            <TableRow>
                <EditText
                    android:maxLength="8"
                    android:id="@+id/et_address_zipcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/et_address_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0">
            <TableRow>
                <TextView
                    android:layout_marginTop="10sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/edit_text_label_street"/>

                <TextView
                    android:layout_marginTop="10sp"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/edit_text_label_number"/>


            </TableRow>
            <TableRow>
                <EditText
                    android:id="@+id/et_address_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/et_address_number"
                    android:layout_width="100sp"
                    android:layout_column="1"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_label_quarter" />

        <EditText
            android:id="@+id/et_address_quarter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0">
                <TableRow>
                    <TextView
                        android:layout_marginTop="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:text="@string/edit_text_label_city"/>

                    <TextView
                        android:layout_marginTop="10sp"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:text="@string/edit_text_label_state"/>

                </TableRow>
                <TableRow>
                    <EditText
                        android:id="@+id/et_address_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="0"/>

                    <EditText
                        android:id="@+id/et_address_state"
                        android:layout_width="100sp"
                        android:layout_column="1"
                        android:layout_height="wrap_content" />
                </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1">
            <TableRow>
                <Button
                    android:id="@+id/btn_address_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/save"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/btn_address_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/clear"
                    style="?android:attr/buttonBarButtonStyle" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>

