<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_freight"
    android:tag="fragment_freight">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_freight_types"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/freight_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/my_addresses"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:text="@string/select_ship_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TableLayout
            android:layout_marginTop="20dp"
            android:id="@+id/scheduled_freight_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TableRow>
                <TextView
                    android:text="@string/day_of_ship"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"/>

                <TextView

                    android:text="@string/start_hour_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"/>
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btn_picker_day_of_ship"
                    android:text="@string/select"
                    android:onClick="onClickedDayOfShip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"/>

                <Button
                    android:id="@+id/btn_picker_start_hour_range"
                    android:text="@string/select"
                    android:onClick="onClickedStartHourRangeShip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/accent_material_light">

        <TextView
            android:paddingLeft="10dp"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            android:id="@+id/lblTotalFreight"
            android:text="Valor Frete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/tv_value_total_freight"
            android:textSize="30dp"
            android:text="R$ 0.00"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:layout_weight="0"/>
    </LinearLayout>
</LinearLayout>