<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#009688"

    android:orientation="vertical"
    tools:contetxt="br.com.compremelhor.activity.DashboardActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80cbc4" >

        <!-- TextView for start purchase -->
        <TextView
            android:id="@+id/start_purchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:clickable="true"
            android:drawableTop="@drawable/sacola"
            android:text="@string/start_purchase"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginStart="60dp"
            android:layout_marginTop="68dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <!-- TextView for edit profile -->
        <TextView
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/profile"
            android:text="@string/edit_profile"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginBottom="93dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/start_purchase"
            android:layout_alignStart="@+id/start_purchase" />

        <!-- TextView for Manager Addresses -->
        <TextView
            android:id="@+id/manager_addresses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/address"
            android:text="@string/manager_addresses"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_alignBottom="@+id/start_purchase"
            android:layout_alignLeft="@+id/list_purchases"
            android:layout_alignStart="@+id/list_purchases" />

        <!-- TextView for de list of purchases done -->
        <TextView
            android:id="@+id/list_purchases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableTop="@drawable/list_purchase"
            android:text="@string/list_purchases"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp"
            android:layout_alignBottom="@+id/edit_profile"
            android:layout_toRightOf="@+id/edit_profile"
            android:layout_toEndOf="@+id/edit_profile" />
    </RelativeLayout>
</LinearLayout>