<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:textSize="20dp"
        android:text="@string/establishment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:text="Supermercado da Gente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1" >

        <TableRow>
            <Button
                android:id="@+id/btn_shopping_list_add"
                android:text="@string/add_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_shoppint_list_finish"
                android:text="@string/finish_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rlMainLayout"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ExpandableListView
            android:id="@+id/lv_shopping_list"
            android:layout_width="match_parent"
            android:layout_height="350dp" />

        <TextView
            android:textSize="30dp"
            android:id="@+id/lblTotal"
            android:text="TOTAL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:textSize="30dp"
            android:gravity="bottom"
            android:text="RS 90,00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</LinearLayout>
